--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -15,6 +15,9 @@
         <spring.version>3.2.4.RELEASE</spring.version>
         <commons-beanutils.version>1.8.3</commons-beanutils.version>
         <jackson.version>1.9.7</jackson.version>
+        <aspectj.version>1.6.11</aspectj.version>
+        <cglib.version>3.1</cglib.version>
+        <jackson.version>1.9.7</jackson.version>
     </properties>
 
     <dependencies>
@@ -40,6 +43,26 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-aop</artifactId>
             <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjrt</artifactId>
+            <version>${aspectj.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>${aspectj.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>${cglib.version}</version>
         </dependency>
 
         <dependency>
