--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -15,10 +15,10 @@
     <properties>
         <spring.version>3.2.4.RELEASE</spring.version>
         <commons-beanutils.version>1.8.3</commons-beanutils.version>
-        <jackson.version>1.9.7</jackson.version>
+        <jackson.version>1.8.5</jackson.version>
         <aspectj.version>1.6.11</aspectj.version>
         <cglib.version>3.1</cglib.version>
-        <jackson.version>1.9.7</jackson.version>
+        <jackson.version>1.8.5</jackson.version>
         <servlet.version>2.4</servlet.version>
         <jsp.version>2.0</jsp.version>
     </properties>
@@ -103,9 +103,9 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>jackson-all</groupId>
+            <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-all</artifactId>
-            <version>${jackson.version}</version>
+            <version>1.8.5</version>
         </dependency>
 
         <dependency>
